# CMakeList.txt : projet CMake pour Problems_and_Tests, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

# Ajoutez une source à l'exécutable de ce projet.
add_executable (Problems_and_Tests "Problems_and_Tests.cpp" "Problems_and_Tests.h" "operations.cpp" "operations.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
